ACS-3510: Rule mappers refactor pt3 (presumably final)